--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,16 +29,21 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-            
+
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew test sonarqube --info
+      - name: Test docker compose deploy
+        if: ${{ github.event_name == 'push' }}
+        run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --remove-orphans -d wait && docker-compose down
+      - name: Collect docker log
+        if: ${{ failure() && github.event_name == 'push' }}
+        run: docker-compose logs
