--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,15 @@ services:
   db_pda_auth:
     container_name: pda_auth_db
     image: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     env_file:
       - config/env/pda-auth-db.env
   pda-auth:
+    container_name: pda_auth
     build:
       dockerfile: pda-auth/Dockerfile
       context: .
@@ -14,17 +20,23 @@ services:
       pda-delivery:
         condition: service_healthy
       broker:
-        condition: service_started
+        condition: service_healthy
       db_pda_auth:
-        condition: service_started
+        condition: service_healthy
     env_file:
       - config/env/pda-auth.env
   db_pda_order:
     container_name: pda_order_db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     image: postgres
     env_file:
       - config/env/pda-order-db.env
   pda-order:
+    container_name: pda_order
     build:
       dockerfile: pda-order/Dockerfile
       context: .
@@ -33,30 +45,34 @@ services:
       pda-auth:
         condition: service_healthy
       db_pda_order:
-        condition: service_started
+        condition: service_healthy
       broker:
-        condition: service_started
+        condition: service_healthy
     env_file:
       - config/env/pda-order.env
   db_pda_delivery:
     container_name: pda_delivery_db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     image: postgres
     ports:
       - "35432:5432"
-    healthcheck:
-      disable: false
     env_file:
       - config/env/pda-delivery-db.env
   pda-delivery:
+    container_name: pda_delivery
     build:
       dockerfile: pda-delivery/Dockerfile
       context: .
     restart: unless-stopped
     depends_on:
       db_pda_delivery:
-        condition: service_started
+        condition: service_healthy
       broker:
-        condition: service_started
+        condition: service_healthy
     env_file:
       - config/env/pda-delivery.env
   pda_api_gateway:
@@ -82,6 +98,12 @@ services:
     image: confluentinc/cp-zookeeper:7.3.0
     hostname: zookeeper
     container_name: zookeeper
+    healthcheck:
+      test: nc -z localhost 2181 || exit -1
+      start_period: 15s
+      interval: 5s
+      timeout: 10s
+      retries: 10
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -90,7 +112,14 @@ services:
     image: confluentinc/cp-kafka:7.3.0
     container_name: broker
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
+    healthcheck:
+      test: nc -z localhost 29092 || exit -1
+      start_period: 15s
+      interval: 5s
+      timeout: 10s
+      retries: 10
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: LISTENER_BOB://0.0.0.0:29092,LISTENER_FRED://0.0.0.0:9092
