#parcel-delivery-app-72: Delivery: delivery-accepted event is sent to the wrong topic

--- a/pda-delivery/src/main/resources/application.yml
+++ b/pda-delivery/src/main/resources/application.yml
@@ -47,6 +47,8 @@ spring:
         #in
         orderCreatedProcessor-in-0:
           destination: order-created
+        orderCreatedProcessor-out-0:
+          destination: delivery-accepted
         orderStatusChangedEvent:
           destination: order-status-changed
         userCreatedEvent:
