--- a/pda-delivery/src/main/resources/application.yml
+++ b/pda-delivery/src/main/resources/application.yml
@@ -47,12 +47,15 @@ spring:
         #in
         orderCreatedProcessor-in-0:
           destination: order-created
+          group: pda
         orderCreatedProcessor-out-0:
           destination: delivery-accepted
         orderStatusChangedEvent:
           destination: order-status-changed
+          group: pda
         userCreatedEvent:
           destination: user-created
+          group: pda
 springdoc:
   swagger-ui:
     use-root-path: true
