--- a/pda-order/src/main/resources/application.yml
+++ b/pda-order/src/main/resources/application.yml
@@ -48,8 +48,10 @@ spring:
       bindings:
         deliveryAssignedEvent:
           destination: delivery-assigned
+          group: pda
         deliveryAcceptedEvent:
           destination: delivery-accepted
+          group: pda
 springdoc:
   swagger-ui:
     use-root-path: true
