--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,8 @@ tc-mockserver = { module = "org.testcontainers:mockserver", version.ref = "testc
 snake-yaml = { module = "org.yaml:snakeyaml", version = "1.29" }
 picoli = { module = "info.picocli:picocli", version = "4.6.1" }
 mockserver-client = { module = "org.mock-server:mockserver-client-java", version = "5.15.0" }
+sonar-plugin = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin", version = "4.0.0.2929" }
+liquibase-plugin = { module = "org.liquibase:liquibase-gradle-plugin", version = "2.2.0" }
 
 [bundles]
 jjwt = ["jjwt-api", "jjwt-impl", "jjwt-jackson"]
