#76: Configuration: Organize according to gradle guide: missing files: test with compose up with gradle

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,8 +42,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew test sonarqube --info
       - name: Test docker compose deploy
-        if: ${{ github.event_name == 'push' }}
-        run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --remove-orphans -d wait && docker-compose down
+        #        if: ${{ github.event_name == 'push' }}
+        run: ./gradlew :composeUp && docker-compose down
       - name: Collect docker log
         if: ${{ failure() && github.event_name == 'push' }}
         run: docker-compose logs
