--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,7 +42,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew test sonarqube --info
       - name: Test docker compose deploy
-        #        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' }}
         run: ./gradlew :composeUp && docker-compose down
       - name: Collect docker log
         if: ${{ failure() && github.event_name == 'push' }}
