Documentation: shorten API tags name in microservices (#80)
* #76: Configuration: Organize according to gradle guide

* #76: Configuration: Organize according to gradle guide: missing files

* #76: Configuration: Organize according to gradle guide: missing files: revert consumer groups

* #76: Configuration: Organize according to gradle guide: missing files: test with compose up with gradle

* #76: Configuration: Organize according to gradle guide: missing files: test with compose up with gradle

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: test upload api-docs

* #76: Configuration: Organize according to gradle guide: missing files: trying new token

* #76: Configuration: Organize according to gradle guide: missing files: trying new token

* #76: Configuration: Organize according to gradle guide: missing files: trying new token

* #76: Configuration: Organize according to gradle guide: missing files: trying new token

* #76: Configuration: Organize according to gradle guide: missing files: trying new token

* #76: Configuration: Organize according to gradle guide: missing files: trying upload from push on main

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,8 +42,21 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew test sonarqube --info
       - name: Test docker compose deploy
-        #        if: ${{ github.event_name == 'push' }}
-        run: ./gradlew :composeUp && docker-compose down
+        if: ${{ github.event_name == 'push' }}
+        run: ./gradlew :composeUp
       - name: Collect docker log
         if: ${{ failure() && github.event_name == 'push' }}
         run: docker-compose logs
+      - uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+      - name: 'Upload docs'
+        if: ${{ success() && github.event_name == 'push' }}
+        run: |
+          curl http://localhost:18080/v3/api-docs -o api-docs.json
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add api-docs.json
+          git commit -m  "Update API docs" || exit 0
+          git push || exit 0
+ 
