--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,6 +50,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Upload docs'
         if: ${{ success() && github.event_name == 'push' }}
         run: |
